update jupyter notebook to aggregate results.txt

--- a/joularjx_result_visualizer.ipynb
+++ b/joularjx_result_visualizer.ipynb
@@ -39,13 +39,22 @@
     "out_folder = 'out'\n",
     "# List all .csv files in the out folder and its subfolders\n",
     "csv_files = []\n",
+    "result_files = []\n",
     "for root, dirs, files in os.walk(out_folder):\n",
     "    for file in files:\n",
     "        if file.endswith('-filtered-methods-energy.csv'):\n",
     "            csv_files.append(os.path.relpath(os.path.join(root, file), out_folder)) # Store relative path to out_folder\n",
+    "        if file.endswith('results.txt'):\n",
+    "            result_files.append(os.path.relpath(os.path.join(root, file), out_folder))\n",
+    "\n",
     "print(f'Found {len(csv_files)} .csv files:')\n",
     "csv_files.sort()\n",
     "for f in csv_files:\n",
+    "    print(f)\n",
+    "\n",
+    "print(f'Found {len(result_files)} results.txt files:')\n",
+    "result_files.sort()\n",
+    "for f in result_files:\n",
     "    print(f)"
    ],
    "id": "794bd09eeb82e3da",
@@ -129,118 +138,11 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "We want to visualize the energy consumption for the entire application in a boxplot.\n",
-    "The energy consumption of each test run is aggregated by summing the energy consumption of all methods in all services."
-   ],
-   "id": "6920c9c007fd9717"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# Prepare a DataFrame for visualization\n",
-    "plot_data = []\n",
-    "\n",
-    "for exp_id, test_runs in experiments_data.items():\n",
-    "    for test_id, services in test_runs.items():\n",
-    "        # Sum energy for all methods in all services for this test run\n",
-    "        total_energy = sum(\n",
-    "            energy\n",
-    "            for svc_methods in services.values()\n",
-    "            for energy in svc_methods.values()\n",
-    "        )\n",
-    "        plot_data.append({\n",
-    "            \"experiment\": exp_id,\n",
-    "            \"test_run\": test_id,\n",
-    "            \"total_energy\": total_energy\n",
-    "        })\n",
-    "\n",
-    "# Convert to DataFrame\n",
-    "df_plot = pd.DataFrame(plot_data)\n",
-    "\n",
-    "# White background, accessible colors\n",
-    "sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
-    "\n",
-    "# Loop through experiments\n",
-    "for exp_id in df_plot[\"experiment\"].unique():\n",
-    "    # Filter for this experiment\n",
-    "    df_exp = df_plot[df_plot[\"experiment\"] == exp_id]\n",
-    "\n",
-    "    if df_exp.empty:\n",
-    "        print(f\"No data found for experiment {exp_id}, skipping.\")\n",
-    "        continue\n",
-    "\n",
-    "    # Create a new figure\n",
-    "    fig, ax = plt.subplots(figsize=(12, 7), dpi=120)\n",
-    "    # Boxplot (one per experiment)\n",
-    "    sns.boxplot(x=\"experiment\", y=\"total_energy\", data=df_exp, ax=ax, width=0.6)\n",
-    "\n",
-    "    # Overlay all test runs as points\n",
-    "    sns.swarmplot(x=\"experiment\", y=\"total_energy\", data=df_exp,\n",
-    "                  color=\"black\", size=5, alpha=0.7, ax=ax)\n",
-    "\n",
-    "    ax.set_ylabel(\"Total Energy (Joules)\")\n",
-    "    ax.set_xlabel(\"Experiment\")\n",
-    "    ax.set_title(f\"Total Energy Consumption – {exp_id}\", fontsize=16, fontweight=\"bold\")\n",
-    "\n",
-    "    sns.despine(ax=ax, offset=10, trim=True)\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "    # Create output folder: out/<experiment-id>/plots\n",
-    "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
-    "    os.makedirs(plot_folder, exist_ok=True)\n",
-    "\n",
-    "    # Save as PNG and SVG\n",
-    "    png_path = os.path.join(plot_folder, f\"{exp_id}_total_energy_boxplot.png\")\n",
-    "    svg_path = os.path.join(plot_folder, f\"{exp_id}_total_energy_boxplot.svg\")\n",
-    "\n",
-    "    fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
-    "    fig.savefig(svg_path, bbox_inches=\"tight\")\n",
-    "    plt.close(fig)\n",
-    "\n",
-    "    print(f\"Saved plots for experiment '{exp_id}' to {plot_folder}\")\n"
-   ],
-   "id": "21d830e2abe71b68",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# White background, accessible colors, good for documentation\n",
-    "sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
-    "# Create a new figure\n",
-    "fig, ax = plt.subplots(figsize=(12, 7), dpi=120)\n",
-    "# Boxplot (one per experiment)\n",
-    "sns.boxplot(x=\"experiment\", y=\"total_energy\", data=df_plot, ax=ax, width=0.6)\n",
-    "\n",
-    "# Overlay all test runs as points\n",
-    "sns.swarmplot(x=\"experiment\", y=\"total_energy\", data=df_plot,\n",
-    "              color=\"black\", size=5, alpha=0.7, ax=ax)\n",
-    "\n",
-    "ax.set_ylabel(\"Total Energy (Joules)\")\n",
-    "ax.set_xlabel(\"Experiment\")\n",
-    "ax.set_title(f\"Total Energy Consumption per Experiment\", fontsize=16, fontweight=\"bold\")\n",
-    "\n",
-    "sns.despine(ax=ax, offset=10, trim=True)\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ],
-   "id": "50840285a1e336e0",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
     "Now we want to visualize the energy consumption for each service in a boxplot.\n",
     "The energy consumption of each service is aggregated by summing the energy consumption of all methods in that service.\n",
     "Again, each test run should be represented as a point in the boxplot."
    ],
-   "id": "85fa85229133bbc"
+   "id": "a072dffe00741115"
   },
   {
    "metadata": {},
@@ -292,8 +194,8 @@
     "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
     "    os.makedirs(plot_folder, exist_ok=True)\n",
     "\n",
-    "    png_path = os.path.join(plot_folder, f\"{exp_id}_all_services_total_energy_boxplot.png\")\n",
-    "    svg_path = os.path.join(plot_folder, f\"{exp_id}_all_services_total_energy_boxplot.svg\")\n",
+    "    png_path = os.path.join(plot_folder, f\"{exp_id}_all_services_filtered_energy_boxplot.png\")\n",
+    "    svg_path = os.path.join(plot_folder, f\"{exp_id}_all_services_filtered_energy_boxplot.svg\")\n",
     "\n",
     "    fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
     "    fig.savefig(svg_path, bbox_inches=\"tight\")\n",
@@ -301,7 +203,7 @@
     "\n",
     "    print(f\"Saved service-level plots for experiment '{exp_id}' in {plot_folder}\")\n"
    ],
-   "id": "c6cc0d1955c9d81",
+   "id": "ce525b5073836119",
    "outputs": [],
    "execution_count": null
   },
@@ -445,6 +347,286 @@
     "        print(f\"Saved method-level grouped bar plot for experiment '{exp_id}', service '{svc}' in {plot_folder}\")\n"
    ],
    "id": "5465c6ebfafe0912",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The results.txt files contain the summary of the test runs, including the total energy consumption for each service and the overall total energy consumption.\n",
+    "We want to read these files and extract the total energy consumption for each service and the overall total energy consumption.\n",
+    "We store this data in a dictionary, where the key is the experiment id and the value is another dictionary with the service names as keys and the total energy consumption as values."
+   ],
+   "id": "acc8ddc4a8926e8d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "results_data = {}\n",
+    "\n",
+    "for root, dirs, files in os.walk(out_folder):\n",
+    "    for file in files:\n",
+    "        if file == \"results.txt\":\n",
+    "            # Build relative path and split into experiment/test run\n",
+    "            rel_path = os.path.relpath(os.path.join(root, file), out_folder)\n",
+    "            parts = rel_path.split(os.sep)\n",
+    "\n",
+    "            if len(parts) < 2:\n",
+    "                continue  # skip malformed structure\n",
+    "\n",
+    "            experiment_id = parts[0]\n",
+    "            test_run_id = parts[1]\n",
+    "\n",
+    "            # Initialize nested dicts\n",
+    "            results_data.setdefault(experiment_id, {})\n",
+    "            results_data[experiment_id].setdefault(test_run_id, {})\n",
+    "\n",
+    "            # Read results.txt\n",
+    "            results_path = os.path.join(root, file)\n",
+    "            with open(results_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "                for line in f:\n",
+    "                    line = line.strip()\n",
+    "                    # Only process lines starting with \"Joules \"\n",
+    "                    if not line.startswith(\"Joules \"):\n",
+    "                        continue\n",
+    "\n",
+    "                    try:\n",
+    "                        # Format: \"Joules <service_name>: <value>\"\n",
+    "                        prefix, rest = line.split(\"Joules \", 1)\n",
+    "                        service_part, energy_part = rest.split(\":\")\n",
+    "                        service_name = service_part.strip()\n",
+    "                        energy_value = float(energy_part.strip())\n",
+    "                    except ValueError:\n",
+    "                        continue  # skip malformed lines\n",
+    "\n",
+    "                    normalized_service = (\n",
+    "                        service_name\n",
+    "                        .replace(\"-\", \"\")            # remove hyphens\n",
+    "                        .replace(\"Backend\", \"\")      # remove 'Backend'\n",
+    "                        .lower()                     # convert to lowercase\n",
+    "                        .strip()                     # trim whitespace\n",
+    "                    )\n",
+    "\n",
+    "                    results_data[experiment_id][test_run_id][normalized_service] = energy_value\n",
+    "\n",
+    "# Example printout\n",
+    "for exp_id, test_runs in results_data.items():\n",
+    "    for test_id, services in test_runs.items():\n",
+    "        print(f\"Experiment: {exp_id}, Test run: {test_id}\")\n",
+    "        for svc, energy in services.items():\n",
+    "            print(f\"  Service: {svc}: {energy} J\")\n"
+   ],
+   "id": "cda87cc08190e219",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "We want to visualize the energy consumption for the entire application in a boxplot.\n",
+    "The energy consumption of each test run is aggregated by summing the energy consumption of all services."
+   ],
+   "id": "fdeaac9e608f09e9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Prepare a DataFrame for visualization\n",
+    "plot_data = []\n",
+    "\n",
+    "for exp_id, test_runs in results_data.items():\n",
+    "    for test_id, services in test_runs.items():\n",
+    "        # Sum energy across all services for this test run\n",
+    "        total_energy = sum(energy for energy in services.values())\n",
+    "\n",
+    "        plot_data.append({\n",
+    "            \"experiment\": exp_id,\n",
+    "            \"test_run\": test_id,\n",
+    "            \"total_energy\": total_energy\n",
+    "        })\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df_plot = pd.DataFrame(plot_data)\n",
+    "\n",
+    "# White background, accessible colors\n",
+    "sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
+    "\n",
+    "# Loop through experiments\n",
+    "for exp_id in df_plot[\"experiment\"].unique():\n",
+    "    # Filter for this experiment\n",
+    "    df_exp = df_plot[df_plot[\"experiment\"] == exp_id]\n",
+    "\n",
+    "    if df_exp.empty:\n",
+    "        print(f\"No data found for experiment {exp_id}, skipping.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Create a new figure\n",
+    "    fig, ax = plt.subplots(figsize=(12, 7), dpi=120)\n",
+    "\n",
+    "    # Boxplot: one per experiment\n",
+    "    sns.boxplot(\n",
+    "        y=\"total_energy\",\n",
+    "        data=df_exp,\n",
+    "        ax=ax,\n",
+    "        width=0.6,\n",
+    "        fliersize=0  # hide default outlier markers to make swarmplot cleaner\n",
+    "    )\n",
+    "\n",
+    "    # Overlay all test runs as points (swarmplot)\n",
+    "    sns.swarmplot(\n",
+    "        y=\"total_energy\",\n",
+    "        data=df_exp,\n",
+    "        color=\"black\",\n",
+    "        size=5,\n",
+    "        alpha=0.7,\n",
+    "        ax=ax\n",
+    "    )\n",
+    "\n",
+    "    # Labels and title\n",
+    "    ax.set_ylabel(\"Total Energy (Joules)\")\n",
+    "    ax.set_xlabel(\"Experiment\")\n",
+    "    ax.set_title(f\"Total Energy Consumption – {exp_id}\", fontsize=16, fontweight=\"bold\")\n",
+    "\n",
+    "    sns.despine(ax=ax, offset=10, trim=True)\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Save into experiment's plot folder\n",
+    "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
+    "    os.makedirs(plot_folder, exist_ok=True)\n",
+    "\n",
+    "    png_path = os.path.join(plot_folder, f\"{exp_id}_total_energy_boxplot.png\")\n",
+    "    svg_path = os.path.join(plot_folder, f\"{exp_id}_total_energy_boxplot.svg\")\n",
+    "\n",
+    "    fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
+    "    fig.savefig(svg_path, bbox_inches=\"tight\")\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "    print(f\"Saved total energy boxplots for experiment '{exp_id}' in {plot_folder}\")\n"
+   ],
+   "id": "4491598d5931b9f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# White background, accessible colors, good for documentation\n",
+    "sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
+    "# Create a new figure\n",
+    "fig, ax = plt.subplots(figsize=(12, 7), dpi=120)\n",
+    "# Boxplot (one per experiment)\n",
+    "sns.boxplot(x=\"experiment\", y=\"total_energy\", data=df_plot, ax=ax, width=0.6)\n",
+    "\n",
+    "# Overlay all test runs as points\n",
+    "sns.swarmplot(x=\"experiment\", y=\"total_energy\", data=df_plot,\n",
+    "              color=\"black\", size=5, alpha=0.7, ax=ax)\n",
+    "\n",
+    "ax.set_ylabel(\"Total Energy (Joules)\")\n",
+    "ax.set_xlabel(\"Experiment\")\n",
+    "ax.set_title(f\"Total Energy Consumption per Experiment\", fontsize=16, fontweight=\"bold\")\n",
+    "\n",
+    "sns.despine(ax=ax, offset=10, trim=True)\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Create output folder: out/plots\n",
+    "plot_folder = os.path.join(out_folder, \"plots\")\n",
+    "os.makedirs(plot_folder, exist_ok=True)\n",
+    "\n",
+    "# Save as PNG and SVG\n",
+    "png_path = os.path.join(plot_folder, f\"All_experiments_total_energy_boxplot.png\")\n",
+    "svg_path = os.path.join(plot_folder, f\"All_experiments_total_energy_boxplot.svg\")\n",
+    "\n",
+    "fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
+    "fig.savefig(svg_path, bbox_inches=\"tight\")\n",
+    "plt.close(fig)\n",
+    "\n",
+    "print(f\"Saved plots for all experiments to {plot_folder}\")"
+   ],
+   "id": "d2c5ecca9638f143",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "We want to visualize the total energy consumption for each service in a boxplot.\n",
+    "Again, each test run should be represented as a point in the boxplot."
+   ],
+   "id": "f92e4c0e9bd73d17"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Prepare DataFrame for per-service analysis (no method summation needed)\n",
+    "service_plot_data = []\n",
+    "\n",
+    "for exp_id, test_runs in results_data.items():\n",
+    "    for test_id, services in test_runs.items():\n",
+    "        for svc, energy in services.items():\n",
+    "            service_plot_data.append({\n",
+    "                \"experiment\": exp_id,\n",
+    "                \"test_run\": test_id,\n",
+    "                \"service\": svc,\n",
+    "                \"total_energy\": energy\n",
+    "            })\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df_service_plot = pd.DataFrame(service_plot_data)\n",
+    "\n",
+    "# White background, accessible colors\n",
+    "sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
+    "\n",
+    "# Iterate through each experiment\n",
+    "for exp_id in df_service_plot[\"experiment\"].unique():\n",
+    "    df_exp = df_service_plot[df_service_plot[\"experiment\"] == exp_id]\n",
+    "\n",
+    "    if df_exp.empty:\n",
+    "        print(f\"No data found for experiment {exp_id}, skipping.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Create plot\n",
+    "    fig, ax = plt.subplots(figsize=(14, 7), dpi=120)\n",
+    "\n",
+    "    # Boxplot: one box per service\n",
+    "    sns.boxplot(x=\"service\", y=\"total_energy\", data=df_exp, ax=ax, width=0.6)\n",
+    "\n",
+    "    # Overlay points for individual test runs\n",
+    "    sns.swarmplot(x=\"service\", y=\"total_energy\", data=df_exp,\n",
+    "                  color=\"black\", size=5, alpha=0.7, ax=ax)\n",
+    "\n",
+    "    # Labels & title\n",
+    "    ax.set_ylabel(\"Total Energy (Joules)\")\n",
+    "    ax.set_xlabel(\"Service\")\n",
+    "    ax.set_title(f\"Service-Level Energy Consumption – {exp_id}\",\n",
+    "                 fontsize=16, fontweight=\"bold\")\n",
+    "    ax.tick_params(axis=\"x\", rotation=45)\n",
+    "    sns.despine(ax=ax, offset=10, trim=True)\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Save plots\n",
+    "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
+    "    os.makedirs(plot_folder, exist_ok=True)\n",
+    "\n",
+    "    png_path = os.path.join(plot_folder, f\"{exp_id}_all_services_total_energy_boxplot.png\")\n",
+    "    svg_path = os.path.join(plot_folder, f\"{exp_id}_all_services_total_energy_boxplot.svg\")\n",
+    "\n",
+    "    fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
+    "    fig.savefig(svg_path, bbox_inches=\"tight\")\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "    print(f\"Saved service-level plots for experiment '{exp_id}' in {plot_folder}\")\n"
+   ],
+   "id": "9c5c5c4a6dbfe855",
    "outputs": [],
    "execution_count": null
   }
