update jupyter notebook, move method filtering to data aggregation section

--- a/joularjx_result_visualizer.ipynb
+++ b/joularjx_result_visualizer.ipynb
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
+    "import re\n",
     "import glob"
    ],
    "id": "a17d44eb631227e",
@@ -87,6 +88,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# Combined regex for all methods to exclude\n",
+    "exclude_pattern = re.compile(r\"^(?:<init>|setCallbacks|apply|lambda.*|CGLIB\\$.*)$\")\n",
+    "\n",
     "# Initialize the multi-layer dictionary\n",
     "experiments_data = {}\n",
     "\n",
@@ -104,7 +108,12 @@
     "    experiments_data[experiment_id].setdefault(test_run_id, {})\n",
     "\n",
     "    # Read the CSV\n",
-    "    df = pd.read_csv(os.path.join(out_folder, csv_file), delimiter=',', header=None, names=['method_full', 'energy'])\n",
+    "    df = pd.read_csv(\n",
+    "        os.path.join(out_folder, csv_file),\n",
+    "        delimiter=',',\n",
+    "        header=None,\n",
+    "        names=['method_full', 'energy']\n",
+    "    )\n",
     "\n",
     "    for _, row in df.iterrows():\n",
     "        # Extract service name and method name\n",
@@ -114,6 +123,10 @@
     "            method_name = parts[-1]  # last element\n",
     "        except IndexError:\n",
     "            continue  # skip malformed rows\n",
+    "\n",
+    "        # Skip methods matching the unwanted pattern\n",
+    "        if exclude_pattern.match(method_name):\n",
+    "            continue\n",
     "\n",
     "        # Initialize service dict if needed\n",
     "        experiments_data[experiment_id][test_run_id].setdefault(service_name, {})\n",
@@ -246,15 +259,10 @@
     "\n",
     "df_method_avg = pd.DataFrame(method_avg_data)\n",
     "\n",
-    "# Combined regex for all methods to exclude\n",
-    "pattern = r\"^(?:<init>|setCallbacks|apply|lambda.*|CGLIB\\$.*)$\"\n",
-    "# Filter DataFrame using regex, keeping only rows that do NOT match\n",
-    "df_method_avg_filtered = df_method_avg[~df_method_avg[\"method\"].str.contains(pattern, regex=True)]\n",
-    "\n",
     "sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
     "\n",
-    "for exp_id in df_method_avg_filtered[\"experiment\"].unique():\n",
-    "    df_exp = df_method_avg_filtered[df_method_avg_filtered[\"experiment\"] == exp_id]\n",
+    "for exp_id in df_method_avg[\"experiment\"].unique():\n",
+    "    df_exp = df_method_avg[df_method_avg[\"experiment\"] == exp_id]\n",
     "\n",
     "    if df_exp.empty:\n",
     "        continue\n",
@@ -306,8 +314,8 @@
    "source": [
     "sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
     "\n",
-    "for exp_id in df_method_avg_filtered[\"experiment\"].unique():\n",
-    "    df_exp = df_method_avg_filtered[df_method_avg_filtered[\"experiment\"] == exp_id]\n",
+    "for exp_id in df_method_avg[\"experiment\"].unique():\n",
+    "    df_exp = df_method_avg[df_method_avg[\"experiment\"] == exp_id]\n",
     "\n",
     "    if df_exp.empty:\n",
     "        continue\n",
